# VineGraph

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  start-tauri.bat  start-tauri.sh  start.bat  tsconfig.json
docs/: PRD.md  backlog.md  design.md  m1-terminal-completion.md  progress.md  self-iteration.md  ui-reference.md
examples/: bug-fix-loop.yaml  demo-loop.yaml  failing-test.yaml  implementation-plan-task-loop.vg.yaml  mac-agent-backend-smoke.yaml  project-task-loop.vg.yaml  project-task-loop.yaml  read-only-backend-loop-dispatch-smoke.vg.yaml  simple-smoke.vg.yaml  simple-test.yaml  vg-m1-014-terminal-loop.vg.yaml
src/: agent-terminal-presentation.ts  app-cli-autodetect.ts  app-config.ts  cli-path.ts  controller-runner.ts  env.ts  execute-runner.ts  graph-assets.ts  graph-loader.ts  index.ts  product-types.ts  projects.ts  readiness.ts  run-history.ts  scheduler.ts  server.ts  startup-cli-probe.ts  template.ts  terminal-attach.ts  terminal-session.ts  types.ts  workspace-manager.ts  workspace-targets.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  pty_session.rs
tests/: agent-terminal-presentation.test.ts  app-cli-autodetect.test.ts  app-config.test.ts  backend-smoke-graph.test.ts  codex-runner.test.ts  project-graph-assets.test.ts  project-task-loop-graph.test.ts  readiness.test.ts  run-control.test.ts  runtime.test.ts  scheduler-workspace-target.test.ts  server-graphs.test.ts  server-product-api.test.ts  server-worktrees.test.ts  startup-cli-probe.test.ts  (+10 more)
(+11 files in other folders)
