[package]
name = "agentgraph"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"

[target.'cfg(windows)'.dependencies]
rfd = "0.17.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
